--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next -p 8000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
+    "json-server": "^0.17.0",
     "next": "latest",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2"
   }
 }
