--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "name": "my-app",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next -p 8000",
     "build": "next build",
