--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   "scripts": {
     "dev": "next -p 8000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "json-server": "^0.17.0",
-    "next": "latest",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "sass": "^1.52.1",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "webpack": "^5.72.1"
   }
 }
